2008-01-09  Sven Schuetz <sven@de.ibm.com>

	* backend/cimxml/cimXmlResp.y, backend/cimxml/cimXmlParser.h,
	backend/cimxml/client.c, backend/cimxml/value.c,
	backend/cimxml/cimXmlParser.c, Makefile.am, backend/cimxml/grammar.h,
	backend/cimxml/parserUtil.h, backend/cimxml/parserUtil.c, 
	backend/cimxml/grammar.c:
	Implemented 1854813: new parser

2008-01-02  Sven Schuetz <sven@de.ibm.com>

	* backend/cimxml/cimXmlResp.y:
	Fixed 1793132: sfcc reports incorrect namespace for associators operation

2007-10-31  Sven Schuetz <sven@de.ibm.com>

	* cimc/cimcdt.h, cimc/cimcft.h, cimc/cimc.h:
	Implemented 1820015: prepare for indication support

2007-10-12  Sven Schuetz <sven@de.ibm.com>

	* backend/cimxml/client.c:
	Fixed 1810017: sfcc generates incorrect XML for complex properties

2007-09-27  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* TEST/test.c:
	invokeMethod test now works correctly

2007-06-20  Sven Schuetz <sven@de.ibm.com>

	* backend/cimxml/cimXmlParser.c, backend/cimxml/cimXmlResp.y:
	Fixed 1777906 issue with the SFCC xml parsing code
	
2007-07-04  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* backend/cimxml/client.c: 
	Fixed 1745279: sfcc does not support complex array types as IN args.
	Datatypes CMPI_refA and CMPI_instanceA were not handled properly.

2007-06-26  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* backend/cimxml/objectpath.c: 
	Fixed 1743362: segfault on 64-bit systems

2007-06-20  Sven Schuetz <sven@de.ibm.com>

	* property.c:
	Fixed 1737254: sfcc can segfault when setting null values

2007-06-20  Viktor Mihajlovski  <mihajlov@dyn-9-152-210-57.boeblingen.de.ibm.com>

	* backend/cimxml/client.c: 
	Fixed 1740368: memory can be corrupted when long string properties are
	being set, due to static buffer usage.

2007-05-31  Adrian Schuur

	* cimXmlResp.y:
	Fixed 1726113: Parser not clearing qualifier cache

2007-05-24  Adrian Schuur

	* objectpath.c: