@@ -5,6 +5,7 @@ Changes in 2.1
 New features
 - 1820015 sfcc: prepare for indication support
 - 1854813 sfcc: new parser
+- 1867649 sfcc: embedded instance support (receiving side)
 
 Changes in 2.0.3:
 =================
